; ModuleID = '/home/carl/AnghaBench/skynet/service-src/extr_service_harbor.c_push_queue.c'
source_filename = "/home/carl/AnghaBench/skynet/service-src/extr_service_harbor.c_push_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.harbor_msg_queue = type { i32 }
%struct.remote_message_header = type { i32 }
%struct.harbor_msg = type { i64, i8*, %struct.remote_message_header }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.harbor_msg_queue*, i8*, i64, %struct.remote_message_header*)* @push_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_queue(%struct.harbor_msg_queue* %0, i8* %1, i64 %2, %struct.remote_message_header* %3) #0 {
  %5 = alloca %struct.harbor_msg_queue*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.remote_message_header*, align 8
  %9 = alloca %struct.harbor_msg, align 8
  store %struct.harbor_msg_queue* %0, %struct.harbor_msg_queue** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store %struct.remote_message_header* %3, %struct.remote_message_header** %8, align 8
  %10 = getelementptr inbounds %struct.harbor_msg, %struct.harbor_msg* %9, i32 0, i32 2
  %11 = load %struct.remote_message_header*, %struct.remote_message_header** %8, align 8
  %12 = bitcast %struct.remote_message_header* %10 to i8*
  %13 = bitcast %struct.remote_message_header* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %12, i8* align 4 %13, i64 4, i1 false)
  %14 = load i8*, i8** %6, align 8
  %15 = getelementptr inbounds %struct.harbor_msg, %struct.harbor_msg* %9, i32 0, i32 1
  store i8* %14, i8** %15, align 8
  %16 = load i64, i64* %7, align 8
  %17 = getelementptr inbounds %struct.harbor_msg, %struct.harbor_msg* %9, i32 0, i32 0
  store i64 %16, i64* %17, align 8
  %18 = load %struct.harbor_msg_queue*, %struct.harbor_msg_queue** %5, align 8
  %19 = call i32 @push_queue_msg(%struct.harbor_msg_queue* %18, %struct.harbor_msg* %9)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @push_queue_msg(%struct.harbor_msg_queue*, %struct.harbor_msg*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
